--- a/base.html
+++ b/base.html
@@ -29,6 +29,7 @@
 
     <script type="text/javascript" src="vendor/jquery.mobile/jquery.mobile-1.3.1.min.js"></script>
     <script type="text/javascript" src="lib/base/jquery.mobile.slider.{{ config_js }}"></script>
+    <script type="text/javascript" src="lib/base/jquery.idle-timer.js"></script>
 
 	<script type="text/javascript" src="vendor/plot.highcharts/highcharts.js"></script>
 	<script type="text/javascript" src="designs/{{ config_design }}.{{ config_js }}"></script>
@@ -45,7 +46,8 @@
 	<link rel="stylesheet" type="text/css" href="pages/base/base.css" />
 
 	{% if isfile('pages/'~config_pages~'/visu.js') %}
-        <script type="text/javascript" src="pages/{{ config_pages }}/visu.js"></script>{% endif %}
+    <script type="text/javascript" src="pages/{{ config_pages }}/visu.js"></script>{% endif %}
+    <link rel="stylesheet" type="text/css" href="pages/{{ config_pages }}/qlock.css" />
 	
     {% if isfile('pages/'~config_pages~'/visu.css') %}
         <link rel="stylesheet" type="text/css" href="pages/{{ config_pages }}/visu.css" />{% endif %}
@@ -82,6 +84,7 @@
 
 <div data-role="page" id="{{ page }}" data-theme="a">
 
+    {% block page %}
 	<div data-role="header" data-position="fixed" data-tap-toggle="false">
         <h1>
             {% block title %}{% endblock %}
@@ -115,6 +118,8 @@
     </div>
 
 	{% block footer %}{% endblock %}
+
+    {% endblock %}
 
 </div>
 
