--- a/navigation.html
+++ b/navigation.html
@@ -110,6 +110,13 @@
             </div>
     </a>
     </li>
+    <li data-icon="false">
+    <a href="index.php?page=aa.tuerkamera">
+        <img class="icon" src="{{ icon0 }}it_camera.png"/><h3>Türkamera</h3>
+            <div class="ui-ri-aside">
+            </div>
+    </a>
+    </li>
 
 </ul>	
 
