--- a/navigation.html
+++ b/navigation.html
@@ -55,7 +55,6 @@
     <a href="index.php?page=aa.garten">
         <img class="icon" src="{{ icon0 }}scene_garden.png"/><h3>Garten</h3>
             <div class="ui-ri-aside">
-                {{ basic.symbol('navi.ws.niederschlag', 'ws.niederschlag', '', icon1~'weather_rain_light.png') }}
             </div>
     </a>
     </li>
@@ -114,6 +113,14 @@
     <a href="index.php?page=aa.tuerkamera">
         <img class="icon" src="{{ icon0 }}it_camera.png"/><h3>Türkamera</h3>
             <div class="ui-ri-aside">
+            </div>
+    </a>
+    </li>
+    <li data-icon="false">
+    <a href="index.php?page=ws">
+        <img class="icon" src="{{ icon0 }}weather_station_quadra.png"/><h3>Wetterstation</h3>
+            <div class="ui-ri-aside">
+                {{ basic.symbol('navi.ws.niederschlag', 'ws.niederschlag', '', icon1~'weather_rain_light.png') }}
             </div>
     </a>
     </li>
