--- a/base.html
+++ b/base.html
@@ -21,13 +21,13 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" href="favicon.png" />              
 
-    <link rel="stylesheet" href="vendor/jquery.mobile/jquery.mobile.structure-1.3.1.min.css" />
-    <script type="text/javascript" src="vendor/jquery/jquery-1.9.1.min.js"></script>
+    <link rel="stylesheet" href="vendor/jquery.mobile/jquery.mobile.structure-1.3.2.min.css" />
+    <script type="text/javascript" src="vendor/jquery/jquery-2.0.3.min.js"></script>
 
 	{% if config_transition != 'fade' %}
         <script type="text/javascript">$(document).on("mobileinit", function(){ $.mobile.defaultPageTransition = '{{ config_transition }}'; });</script>{% endif %}
 
-    <script type="text/javascript" src="vendor/jquery.mobile/jquery.mobile-1.3.1.min.js"></script>
+    <script type="text/javascript" src="vendor/jquery.mobile/jquery.mobile-1.3.2.min.js"></script>
     <script type="text/javascript" src="lib/base/jquery.mobile.slider.{{ config_js }}"></script>
     <script type="text/javascript" src="lib/base/jquery.idle-timer.js"></script>
 
@@ -79,7 +79,7 @@
 		// widget.list();
     });
 
-    $.mobile.page.prototype.options.domCache = {{ config_cache_dom }};
+    $.mobile.page.prototype.options.domCache = {{ (config_cache_dom ? 'true' : 'false')  }};
 </script>  
 
 <div data-role="page" id="{{ page }}" data-theme="a">
