added weather station tiles

--- a/base.html
+++ b/base.html
@@ -58,6 +58,7 @@
     {% import "basic.html" as basic %}
     {% import "device.html" as device %}  
     {% import "plot.html" as plot %}        
+    {% import "icon.html" as icon %}        
 </head> 
 
 
