--- a/base.html
+++ b/base.html
@@ -111,7 +111,14 @@
     <div data-role="content" class="page-bg">
         {% block content_all %}
 		<div class="content-primary">
-            {% block content %}{% endblock %}
+            {% block content %}
+            <div class="nw_quad">
+                {% block quad_main_top %}{% endblock %}
+            </div>
+            <div class="nw_quad nw_min_tablet">
+                {% block quad_main_bottom %}{% endblock %}
+            </div>
+            {% endblock %}
         </div>
         
         <div class="content-secondary"> 
