--- a/navigation.html
+++ b/navigation.html
@@ -124,6 +124,14 @@
             </div>
     </a>
     </li>
+    </li>
+    <li data-icon="false">
+    <a href="index.php?page=pv">
+        <img class="icon" src="{{ icon0 }}measure_photovoltaic_inst.png"/><h3>Photovoltaik</h3>
+            <div class="ui-ri-aside">
+            </div>
+    </a>
+    </li>
 
 </ul>	
 
