some new things ;)

--- a/navigation.html
+++ b/navigation.html
@@ -132,6 +132,20 @@
             </div>
     </a>
     </li>
+    <li data-icon="false">
+    <a href="index.php?page=wp">
+        <img class="icon" src="{{ icon0 }}sani_earth_source_heat_pump.png"/><h3>Wärmepumpe</h3>
+            <div class="ui-ri-aside">
+            </div>
+    </a>
+    </li>
+    <li data-icon="false">
+    <a href="index.php?page=system">
+        <img class="icon" src="{{ icon0 }}it_server.png"/><h3>Server</h3>
+            <div class="ui-ri-aside">
+            </div>
+    </a>
+    </li>
 
 </ul>	
 
