--- a/base.html
+++ b/base.html
@@ -35,6 +35,11 @@
 	<script type="text/javascript" src="designs/{{ config_design }}.{{ config_js }}"></script>
     <script type="text/javascript" src="widgets/widget.{{ config_js }}"></script>
 
+    <script type="text/javascript" src="vendor/jquery.mobile.datebox/jqm-datebox-1.1.0.core.js"></script>
+    <link rel="stylesheet" type="text/css" href="vendor/jquery.mobile.datebox/jqm-datebox-1.1.0.css" />
+    <script type="text/javascript" src="vendor/jquery.mobile.datebox/jqm-datebox-1.1.0.mode.flipbox.js"></script>
+    <script type="text/javascript" src="vendor/jquery.mobile.datebox/jquery.mobile.datebox.i18n.de.utf8.js"></script>
+
     {% if config_animation %}
         <script type="text/javascript" src="widgets/animation.{{ config_js }}"></script>{% endif %}
 
